# data-forge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  compose.s3.yaml  compose.yaml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  main-image-test.yml  pr-image.yml  release.yml  security-scan.yml  smoke-test.yml
deploy/garage/: garage.toml  init.sh
docker/: garage.toml
docs/: IMPLEMENTATION_PLAN.md  PRD.md  deployment.md  release-versioning.md  stage1-benchmark.md  stage5-benchmark.md
helm/data-forge/: Chart.yaml  README.md  overrides.yaml  values.schema.json  values.yaml
helm/data-forge/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  pvc.yaml  redis-deployment.yaml  redis-pvc.yaml  redis-service.yaml  secret.yaml  serviceaccount.yaml  worker-deployment.yaml  worker-hpa.yaml
scripts/: benchmark.py  benchmark_stage1.py  bump_version.py  source_cmip6_benchmark_data.py
src/dataforge/: settings.py
src/dataforge/api/: __init__.py  app.py  deps.py
src/dataforge/api/routes/: jobs.py
src/dataforge/cli/: __init__.py  main.py
src/dataforge/client/: __init__.py  api.py
src/dataforge/core/: converter.py  dask_converter.py  esgf_publisher.py  input_paths.py  metadata.py  stac_client.py  storage.py  validation.py
src/dataforge/job_store/: __init__.py  base.py  fake.py  redis.py
src/dataforge/models/: api.py  config.py  dask_config.py  job.py
src/dataforge/monitoring/: __init__.py  metrics.py
src/dataforge/workers/: __init__.py  converter_worker.py
tests/: test_api_jobs_unit.py  test_cli.py  test_client_api.py  test_converter.py  test_dask_converter.py  test_imports.py  test_integration_dask.py  test_integration_kerchunk.py  test_integration_local_workflow.py  test_job_models.py  test_job_store_fake.py  test_job_store_redis_errors.py  test_job_store_redis_unit.py  test_job_store_transitions.py  test_metadata.py  test_stac_client.py  test_stage2_imports.py  test_storage.py  test_validation.py  test_worker_unit.py
