[tool.poetry]
name = "data-forge"
version = "0.1.0"
description = "Asynchronous service for generating Kerchunk reference files"
authors = ["Jason Boutte <boutte3@llnl.gov>"]
license = "MIT"
packages = [{ include = "dataforge", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"

# Stage 1
pydantic = "^2.0"
fsspec = "^2025.0"
s3fs = "^2025.0"
kerchunk = "^0.2"
h5py = "^3.12.0"

# Stage 2
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
dramatiq = { version = "^1.17.0", extras = ["redis"] }
redis = "^5.0.0"
httpx = "^0.28.0"
typer = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^25.0"
mypy = "^1.17.0"
pre-commit = "^4.0"
ruff = "^0.12.0"

[tool.poetry.scripts]
data-forge = "dataforge.cli.main:app"
dataforge = "dataforge.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
