[tool.poetry]
name = "data-forge"
version = "0.1.0"
description = "Asynchronous service for generating Kerchunk reference files"
authors = ["Jason Boutte <boutte3@llnl.gov>"]
license = "MIT"
packages = [{ include = "dataforge", from = "src" }]

[project]
name = "data-forge"
version = "0.1.0"
description = "Asynchronous service for generating Kerchunk reference files"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pydantic>=2.0,<3.0",
    "httpx>=0.28.0,<0.29.0",
    "typer>=0.16.0,<0.17.0",
    "esgcet @ git+https://github.com/ESGF/esg-publisher.git@esgf-ng-v5.4a",
]

[project.optional-dependencies]
server = [
    "fsspec>=2025.0,<2026.0",
    "s3fs>=2025.0,<2026.0",
    "kerchunk>=0.2,<0.3",
    "h5py>=3.12.0,<4.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.34.0,<0.35.0",
    "dramatiq[redis]>=1.17.0,<2.0.0",
    "redis>=5.0.0,<6.0.0",
    "dask>=2025.0,<2026.0",
    "distributed>=2025.0,<2026.0",
    "prometheus-client>=0.24.0,<0.26.0",
    "scipy>=1.16.0,<2.0.0",
]

[project.scripts]
data-forge = "dataforge.cli.main:app"
dataforge = "dataforge.cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "black>=25.0,<26.0",
    "mypy>=1.17.0,<2.0.0",
    "pre-commit>=4.0,<5.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"

pydantic = "^2.0"
httpx = "^0.28.0"
typer = "^0.16.0"
esgcet = { git = "https://github.com/ESGF/esg-publisher.git", rev = "esgf-ng-v5.4a" }
fsspec = { version = "^2025.0", optional = true }
s3fs = { version = "^2025.0", optional = true }
kerchunk = { version = "^0.2", optional = true }
h5py = { version = "^3.12.0", optional = true }
fastapi = { version = "^0.115.0", optional = true }
uvicorn = { version = "^0.34.0", optional = true }
dramatiq = { version = "^1.17.0", extras = ["redis"], optional = true }
redis = { version = "^5.0.0", optional = true }
dask = { version = "^2025.0", optional = true }
distributed = { version = "^2025.0", optional = true }
prometheus-client = { version = "^0.24.0", optional = true }
scipy = { version = "^1.16.0", optional = true }

[tool.poetry.extras]
server = [
    "fsspec",
    "s3fs",
    "kerchunk",
    "h5py",
    "fastapi",
    "uvicorn",
    "dramatiq",
    "redis",
    "dask",
    "distributed",
    "prometheus-client",
    "scipy",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^25.0"
mypy = "^1.17.0"
pre-commit = "^4.0"
ruff = "^0.12.0"

[tool.poetry.scripts]
data-forge = "dataforge.cli.main:app"
dataforge = "dataforge.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"
